--- a/garcia_franklin_lab8/src/Principal.form
+++ b/garcia_franklin_lab8/src/Principal.form
@@ -819,6 +819,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Colgar"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton8MouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
